[gd_scene load_steps=6 format=3 uid="uid://3ukh44ouml7b"]

[ext_resource type="Script" path="res://addons/gd_nnabla_c_runtime/example/inference.gd" id="1_oyr4g"]
[ext_resource type="Texture2D" uid="uid://dusjdo6u024q3" path="res://addons/gd_nnabla_c_runtime/example/res/t10k/img_0000.png" id="2_vodt2"]
[ext_resource type="Texture2D" uid="uid://ht24am7wbdu6" path="res://addons/gd_nnabla_c_runtime/example/res/t10k/img_0001.png" id="3_uyx4v"]
[ext_resource type="Texture2D" uid="uid://c6g0vx2af6evo" path="res://addons/gd_nnabla_c_runtime/example/res/t10k/img_0002.png" id="4_xc2yn"]
[ext_resource type="Texture2D" uid="uid://c32wrpc1532nj" path="res://addons/gd_nnabla_c_runtime/example/res/t10k/img_0003.png" id="5_3tpci"]

[node name="nnabla_test" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oyr4g")
metadata/_edit_lock_ = true

[node name="simple" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="edit_0" type="LineEdit" parent="simple"]
layout_mode = 0
offset_left = 24.0
offset_top = 64.0
offset_right = 104.0
offset_bottom = 95.0
text = "0"
alignment = 1

[node name="label" type="Label" parent="simple/edit_0"]
layout_mode = 0
offset_top = 40.0
offset_right = 80.0
offset_bottom = 72.0
horizontal_alignment = 1

[node name="edit_1" type="LineEdit" parent="simple"]
layout_mode = 0
offset_left = 112.0
offset_top = 64.0
offset_right = 192.0
offset_bottom = 95.0
text = "0"
alignment = 1

[node name="label" type="Label" parent="simple/edit_1"]
layout_mode = 0
offset_top = 40.0
offset_right = 80.0
offset_bottom = 72.0
horizontal_alignment = 1

[node name="edit_2" type="LineEdit" parent="simple"]
layout_mode = 0
offset_left = 200.0
offset_top = 64.0
offset_right = 280.0
offset_bottom = 95.0
text = "0"
alignment = 1

[node name="label" type="Label" parent="simple/edit_2"]
layout_mode = 0
offset_top = 40.0
offset_right = 80.0
offset_bottom = 72.0
horizontal_alignment = 1

[node name="edit_3" type="LineEdit" parent="simple"]
layout_mode = 0
offset_left = 288.0
offset_top = 64.0
offset_right = 368.0
offset_bottom = 95.0
text = "0"
alignment = 1

[node name="label" type="Label" parent="simple/edit_3"]
layout_mode = 0
offset_top = 40.0
offset_right = 80.0
offset_bottom = 72.0
horizontal_alignment = 1

[node name="edit_4" type="LineEdit" parent="simple"]
layout_mode = 0
offset_left = 376.0
offset_top = 64.0
offset_right = 456.0
offset_bottom = 95.0
text = "0"
alignment = 1

[node name="label" type="Label" parent="simple/edit_4"]
layout_mode = 0
offset_top = 40.0
offset_right = 80.0
offset_bottom = 72.0
horizontal_alignment = 1

[node name="edit_5" type="LineEdit" parent="simple"]
layout_mode = 0
offset_left = 24.0
offset_top = 160.0
offset_right = 104.0
offset_bottom = 191.0
text = "0"
alignment = 1

[node name="label" type="Label" parent="simple/edit_5"]
layout_mode = 0
offset_top = 40.0
offset_right = 80.0
offset_bottom = 72.0
horizontal_alignment = 1

[node name="edit_6" type="LineEdit" parent="simple"]
layout_mode = 0
offset_left = 112.0
offset_top = 160.0
offset_right = 192.0
offset_bottom = 191.0
text = "0"
alignment = 1

[node name="label" type="Label" parent="simple/edit_6"]
layout_mode = 0
offset_top = 40.0
offset_right = 80.0
offset_bottom = 72.0
horizontal_alignment = 1

[node name="edit_7" type="LineEdit" parent="simple"]
layout_mode = 0
offset_left = 200.0
offset_top = 160.0
offset_right = 280.0
offset_bottom = 191.0
text = "0"
alignment = 1

[node name="label" type="Label" parent="simple/edit_7"]
layout_mode = 0
offset_top = 40.0
offset_right = 80.0
offset_bottom = 72.0
horizontal_alignment = 1

[node name="edit_8" type="LineEdit" parent="simple"]
layout_mode = 0
offset_left = 288.0
offset_top = 160.0
offset_right = 368.0
offset_bottom = 191.0
text = "0"
alignment = 1

[node name="label" type="Label" parent="simple/edit_8"]
layout_mode = 0
offset_top = 40.0
offset_right = 80.0
offset_bottom = 72.0
horizontal_alignment = 1

[node name="edit_9" type="LineEdit" parent="simple"]
layout_mode = 0
offset_left = 376.0
offset_top = 160.0
offset_right = 456.0
offset_bottom = 191.0
text = "0"
alignment = 1

[node name="label" type="Label" parent="simple/edit_9"]
layout_mode = 0
offset_top = 40.0
offset_right = 80.0
offset_bottom = 72.0
horizontal_alignment = 1

[node name="mnist" type="Control" parent="."]
anchors_preset = 0
offset_left = 480.0
offset_right = 960.0
offset_bottom = 448.0

[node name="tex0" type="TextureRect" parent="mnist"]
layout_mode = 0
offset_left = 32.0
offset_top = 64.0
offset_right = 96.0
offset_bottom = 128.0
texture = ExtResource("2_vodt2")

[node name="label" type="Label" parent="mnist/tex0"]
layout_mode = 0
offset_top = 72.0
offset_right = 64.0
offset_bottom = 104.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="tex1" type="TextureRect" parent="mnist"]
layout_mode = 0
offset_left = 152.0
offset_top = 64.0
offset_right = 216.0
offset_bottom = 128.0
texture = ExtResource("3_uyx4v")

[node name="label" type="Label" parent="mnist/tex1"]
layout_mode = 0
offset_top = 72.0
offset_right = 64.0
offset_bottom = 104.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="tex2" type="TextureRect" parent="mnist"]
layout_mode = 0
offset_left = 264.0
offset_top = 64.0
offset_right = 328.0
offset_bottom = 128.0
texture = ExtResource("4_xc2yn")

[node name="label" type="Label" parent="mnist/tex2"]
layout_mode = 0
offset_top = 72.0
offset_right = 64.0
offset_bottom = 104.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="tex3" type="TextureRect" parent="mnist"]
layout_mode = 0
offset_left = 384.0
offset_top = 64.0
offset_right = 448.0
offset_bottom = 128.0
texture = ExtResource("5_3tpci")

[node name="label" type="Label" parent="mnist/tex3"]
layout_mode = 0
offset_top = 72.0
offset_right = 64.0
offset_bottom = 104.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="lbl_nnabla_version" type="Label" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 256.0
offset_right = 704.0
offset_bottom = 288.0
text = "nnabla version"
vertical_alignment = 1

[node name="value" type="Label" parent="lbl_nnabla_version"]
layout_mode = 0
offset_left = 192.0
offset_right = 416.0
offset_bottom = 32.0
vertical_alignment = 1

[node name="lbl_c_runtime_version" type="Label" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 288.0
offset_right = 704.0
offset_bottom = 320.0
text = "c runtime version"
vertical_alignment = 1

[node name="value" type="Label" parent="lbl_c_runtime_version"]
layout_mode = 0
offset_left = 192.0
offset_right = 416.0
offset_bottom = 32.0
vertical_alignment = 1

[node name="lbl_nnb_version" type="Label" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 320.0
offset_right = 704.0
offset_bottom = 352.0
text = "nnb version"
vertical_alignment = 1

[node name="value" type="Label" parent="lbl_nnb_version"]
layout_mode = 0
offset_left = 192.0
offset_right = 416.0
offset_bottom = 32.0
vertical_alignment = 1

[node name="lbl_nnb_revision" type="Label" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 352.0
offset_right = 704.0
offset_bottom = 384.0
text = "nnb revision"
vertical_alignment = 1

[node name="value" type="Label" parent="lbl_nnb_revision"]
layout_mode = 0
offset_left = 192.0
offset_right = 416.0
offset_bottom = 32.0
vertical_alignment = 1

[node name="btn_setup" type="Button" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 448.0
offset_right = 464.0
offset_bottom = 480.0
focus_mode = 0
text = "Setup"

[node name="btn_forward" type="Button" parent="."]
layout_mode = 0
offset_left = 496.0
offset_top = 448.0
offset_right = 616.0
offset_bottom = 480.0
focus_mode = 0
text = "Forward"

[connection signal="pressed" from="btn_setup" to="." method="_on_btn_setup_pressed"]
[connection signal="pressed" from="btn_forward" to="." method="_on_btn_forward_pressed"]
